--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>COMPLIMENT ME</h1>
+	<h1>FLATTER</h1>
 	<div id="cameraFeed">
 		<video id="videoFeed" autoplay></video>
 	</div>
